--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -8,8 +8,8 @@
         Title="Калькулятор" Height="425" Width="336.458" Background="#FFC7C7C7">
     <Grid Margin="0,0,2,0">
 
-        <TextBox HorizontalAlignment="Left" Height="62" Margin="10,10,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="306" BorderBrush="#FF6E6E6E"/>
-        <Label Content="Label" HorizontalAlignment="Left" Margin="20,19,0,0" VerticalAlignment="Top" Width="60" Height="37"/>
+        <TextBox x:Name="textBox1" HorizontalAlignment="Left" Height="62" Margin="10,0,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="306" BorderBrush="#FF6E6E6E" FontSize="22"/>
+        <Label x:Name="label1" Content="" HorizontalAlignment="Left" Margin="20,12,0,0" VerticalAlignment="Top" Width="60" Height="37"/>
         <Button Content="С" HorizontalAlignment="Left" Margin="20,91,0,0" VerticalAlignment="Top" Width="60" Height="40" BorderBrush="#FF6A6A6A">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
@@ -40,7 +40,7 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Button Content="+" HorizontalAlignment="Left" Margin="249,91,0,0" VerticalAlignment="Top" Width="60" Height="40" BorderBrush="#FF6A6A6A">
+        <Button Content="+" HorizontalAlignment="Left" Margin="249,91,0,0" VerticalAlignment="Top" Width="60" Height="40" BorderBrush="#FF6A6A6A" Click="Button_Click_11">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
                     <GradientStop Color="#FF636363" Offset="1"/>
@@ -50,7 +50,7 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Button Content="7" HorizontalAlignment="Left" Margin="20,149,0,0" VerticalAlignment="Top" Width="60" Height="40" BorderBrush="#FF6A6A6A">
+        <Button Content="7" HorizontalAlignment="Left" Margin="20,149,0,0" VerticalAlignment="Top" Width="60" Height="40" BorderBrush="#FF6A6A6A" Click="Button_Click_7">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
                     <GradientStop Color="#FF636363" Offset="1"/>
@@ -60,7 +60,7 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Button Content="8" HorizontalAlignment="Left" Margin="95,149,0,0" VerticalAlignment="Top" Width="60" Height="40" BorderBrush="#FF6A6A6A">
+        <Button Content="8" HorizontalAlignment="Left" Margin="95,149,0,0" VerticalAlignment="Top" Width="60" Height="40" BorderBrush="#FF6A6A6A" Click="Button_Click_8">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
                     <GradientStop Color="#FF636363" Offset="1"/>
@@ -70,7 +70,7 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Button Content="9" HorizontalAlignment="Left" Margin="172,149,0,0" VerticalAlignment="Top" Width="60" Height="40" BorderBrush="#FF6A6A6A">
+        <Button Content="9" HorizontalAlignment="Left" Margin="172,149,0,0" VerticalAlignment="Top" Width="60" Height="40" BorderBrush="#FF6A6A6A" Click="Button_Click_9">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
                     <GradientStop Color="#FF636363" Offset="1"/>
@@ -90,7 +90,7 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Button Content="4" HorizontalAlignment="Left" Margin="20,208,0,0" VerticalAlignment="Top" Width="60" Height="40" BorderBrush="#FF6A6A6A">
+        <Button Content="4" HorizontalAlignment="Left" Margin="20,208,0,0" VerticalAlignment="Top" Width="60" Height="40" BorderBrush="#FF6A6A6A" Click="Button_Click_4">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
                     <GradientStop Color="#FF636363" Offset="1"/>
@@ -100,7 +100,7 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Button Content="5" HorizontalAlignment="Left" Margin="95,208,0,0" VerticalAlignment="Top" Width="60" Height="40" BorderBrush="#FF6A6A6A">
+        <Button Content="5" HorizontalAlignment="Left" Margin="95,208,0,0" VerticalAlignment="Top" Width="60" Height="40" BorderBrush="#FF6A6A6A" Click="Button_Click_5">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
                     <GradientStop Color="#FF636363" Offset="1"/>
@@ -110,7 +110,7 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Button Content="6" HorizontalAlignment="Left" Margin="172,208,0,0" VerticalAlignment="Top" Width="60" Height="40" BorderBrush="#FF6A6A6A">
+        <Button Content="6" HorizontalAlignment="Left" Margin="172,208,0,0" VerticalAlignment="Top" Width="60" Height="40" BorderBrush="#FF6A6A6A" Click="Button_Click_6">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
                     <GradientStop Color="#FF636363" Offset="1"/>
@@ -130,7 +130,7 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Button Content="1" HorizontalAlignment="Left" Margin="20,269,0,0" VerticalAlignment="Top" Width="60" Height="40" BorderBrush="#FF6A6A6A">
+        <Button Content="1" HorizontalAlignment="Left" Margin="20,269,0,0" VerticalAlignment="Top" Width="60" Height="40" BorderBrush="#FF6A6A6A" Click="Button_Click_1">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
                     <GradientStop Color="#FF636363" Offset="1"/>
@@ -140,7 +140,7 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Button Content="2" HorizontalAlignment="Left" Margin="95,269,0,0" VerticalAlignment="Top" Width="60" Height="40" BorderBrush="#FF6A6A6A">
+        <Button Content="2" HorizontalAlignment="Left" Margin="95,269,0,0" VerticalAlignment="Top" Width="60" Height="40" BorderBrush="#FF6A6A6A" Click="Button_Click_2">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
                     <GradientStop Color="#FF636363" Offset="1"/>
@@ -150,7 +150,7 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Button Content="3" HorizontalAlignment="Left" Margin="172,269,0,0" VerticalAlignment="Top" Width="60" Height="40" BorderBrush="#FF6A6A6A">
+        <Button Content="3" HorizontalAlignment="Left" Margin="172,269,0,0" VerticalAlignment="Top" Width="60" Height="40" BorderBrush="#FF6A6A6A" Click="Button_Click_3">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
                     <GradientStop Color="#FF636363" Offset="1"/>
@@ -170,7 +170,7 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Button Content="0" HorizontalAlignment="Left" Margin="20,328,0,0" VerticalAlignment="Top" Width="60" Height="40" BorderBrush="#FF6A6A6A">
+        <Button Content="0" HorizontalAlignment="Left" Margin="20,328,0,0" VerticalAlignment="Top" Width="60" Height="40" BorderBrush="#FF6A6A6A" Click="Button_Click">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
                     <GradientStop Color="#FF636363" Offset="1"/>
@@ -180,7 +180,7 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Button Content="." HorizontalAlignment="Left" Margin="95,328,0,0" VerticalAlignment="Top" Width="60" Height="40" BorderBrush="#FF6A6A6A">
+        <Button Content="." HorizontalAlignment="Left" Margin="95,328,0,0" VerticalAlignment="Top" Width="60" Height="40" BorderBrush="#FF6A6A6A" Click="Button_Click_10">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
                     <GradientStop Color="#FF636363" Offset="1"/>
