--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -80,7 +80,7 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Button Content="-" HorizontalAlignment="Left" Margin="249,149,0,0" VerticalAlignment="Top" Width="60" Height="40" BorderBrush="#FF6A6A6A">
+        <Button Content="-" HorizontalAlignment="Left" Margin="249,149,0,0" VerticalAlignment="Top" Width="60" Height="40" BorderBrush="#FF6A6A6A" Click="Button_Click_12">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
                     <GradientStop Color="#FF636363" Offset="1"/>
@@ -120,7 +120,7 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Button Content="*" HorizontalAlignment="Left" Margin="249,208,0,0" VerticalAlignment="Top" Width="60" Height="40" BorderBrush="#FF6A6A6A">
+        <Button Content="*" HorizontalAlignment="Left" Margin="249,208,0,0" VerticalAlignment="Top" Width="60" Height="40" BorderBrush="#FF6A6A6A" Click="Button_Click_13">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
                     <GradientStop Color="#FF636363" Offset="1"/>
@@ -160,7 +160,7 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Button Content="/" HorizontalAlignment="Left" Margin="249,269,0,0" VerticalAlignment="Top" Width="60" Height="40" BorderBrush="#FF6A6A6A">
+        <Button Content="/" HorizontalAlignment="Left" Margin="249,269,0,0" VerticalAlignment="Top" Width="60" Height="40" BorderBrush="#FF6A6A6A" Click="Button_Click_14">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
                     <GradientStop Color="#FF636363" Offset="1"/>
@@ -190,7 +190,7 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Button Content="=" HorizontalAlignment="Left" Margin="172,328,0,0" VerticalAlignment="Top" Width="137" Height="40" BorderBrush="#FF6A6A6A">
+        <Button Content="=" HorizontalAlignment="Left" Margin="172,328,0,0" VerticalAlignment="Top" Width="137" Height="40" BorderBrush="#FF6A6A6A" Click="Button_Click_15">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
                     <GradientStop Color="#FF636363" Offset="1"/>
