--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -10,7 +10,7 @@
 
         <TextBox x:Name="textBox1" HorizontalAlignment="Left" Height="62" Margin="10,0,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="306" BorderBrush="#FF6E6E6E" FontSize="22"/>
         <Label x:Name="label1" Content="" HorizontalAlignment="Left" Margin="20,12,0,0" VerticalAlignment="Top" Width="60" Height="37"/>
-        <Button Content="С" HorizontalAlignment="Left" Margin="20,91,0,0" VerticalAlignment="Top" Width="60" Height="40" BorderBrush="#FF6A6A6A">
+        <Button Content="С" HorizontalAlignment="Left" Margin="20,91,0,0" VerticalAlignment="Top" Width="60" Height="40" BorderBrush="#FF6A6A6A" Click="Button_Click_16">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
                     <GradientStop Color="#FF636363" Offset="1"/>
@@ -20,7 +20,7 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Button Content="&lt;--" HorizontalAlignment="Left" Margin="95,91,0,0" VerticalAlignment="Top" Width="60" Height="40" BorderBrush="#FF6A6A6A">
+        <Button Content="&lt;--" HorizontalAlignment="Left" Margin="95,91,0,0" VerticalAlignment="Top" Width="60" Height="40" BorderBrush="#FF6A6A6A" Click="Button_Click_17">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
                     <GradientStop Color="#FF636363" Offset="1"/>
@@ -30,7 +30,7 @@
                 </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <Button Content="+/-" HorizontalAlignment="Left" Margin="172,91,0,0" VerticalAlignment="Top" Width="60" Height="40" BorderBrush="#FF6A6A6A">
+        <Button Content="+/-" HorizontalAlignment="Left" Margin="172,91,0,0" VerticalAlignment="Top" Width="60" Height="40" BorderBrush="#FF6A6A6A" Click="Button_Click_18">
             <Button.Background>
                 <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
                     <GradientStop Color="#FF636363" Offset="1"/>
